SourceForge changed the Subversion server address
--- pt-br ---------

O SourceForge modificou o endereco do servidor Subversion


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@624 31482026-630c-0410-91bb-adf60aae4351

--- a/config/motiro.yml
+++ b/config/motiro.yml
@@ -29,7 +29,7 @@ subversion:
   #
   # Tells the reporter where to find your project's repository
   # Default: https://svn.sourceforge.net/svnroot/motiro
-  repo: https://svn.sourceforge.net/svnroot/motiro
+  repo: https://motiro.svn.sourceforge.net/svnroot/motiro
 
   # subversion/{user,password}
   #
