--- a/test/fixtures/revisions.yml
+++ b/test/fixtures/revisions.yml
@@ -169,3 +169,14 @@ second_multilanguage_revision:
         Esta é a segunda versão em português
         
         Aqui está um pouco de texto em '''negrito'''.
+
+second_page_edition:
+  id: 17
+  page_id: 11
+  kind: common
+  modified_at: 2007-07-13 11:33:41
+  last_editor_id: 1000005 #eric
+  editors: ""
+  title: This page has been edited since creation
+  text: Eric changed the text that John entered. Twice.
+  position: 3
