--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -61,3 +61,9 @@ multilanguage_page:
   name: MultiLanguagePage
   kind: feature
   modified_at: 2007-06-14 12:06:38
+
+finished_feature:
+  id: 13
+  name: FinishedFeature
+  kind: feature
+  modified_at: 2007-09-02 10:31:16
