--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -73,3 +73,10 @@ refering_page:
   name: ReferingPage
   kind: common
   modified_at: 2008-01-22 05:10:24
+
+dependent_feature:
+  id: 15
+  name: DependentFeature
+  kind: feature
+  modified_at: 2020-02-22 15:57:37
+
